--- a/src/app/movies/movies.component.css
+++ b/src/app/movies/movies.component.css
@@ -3,3 +3,12 @@
   padding: 0 16px;
 }
 
+/* START movie detail */
+.movie--detail {
+  max-width: 75%;
+  margin: 30px auto;
+  box-shadow: 0 0 10px #C0C0C0;
+  font-size: 22px;
+  line-height: 28px;
+}
+/* END movie detail */
