--- a/src/app/shared/styles.css
+++ b/src/app/shared/styles.css
@@ -10,6 +10,10 @@ body {
   padding-left: 0 !important;
 }
 
+.no-padding-right {
+  padding-right: 0 !important;
+}
+
 .green {
   color: green;
 }
