Add routing, navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-toolbar></app-toolbar>
+<toolbar></toolbar>
 
 <div class="container center-block">
-  <movies></movies>
+  <router-outlet></router-outlet>
 </div>
