--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,2 +1,6 @@
-<div class="row">
-</div>
+<nav>
+  <a routerLink="/movies/now-playing" routerLinkActive="router-link-active">Now Playing</a>
+  <a routerLink="/movies/popular" routerLinkActive="router-link-active">Popular</a>
+  <a routerLink="/movies/top-rated" routerLinkActive="router-link-active">Top Rated</a>
+  <a routerLink="/movies/upcoming" routerLinkActive="router-link-active">Upcoming</a>
+</nav>
