--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,5 +1,6 @@
 <movie-details
   [movie]="movie"
   [isEven]="isEven"
+  [genres]="genres"
   *ngFor="let movie of movies; let isEven = even">
 </movie-details>
