Add ability to choose a random movie to see

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,3 +1,9 @@
+<div class="row push-slightly-down">
+  <div class="col-md-12 text-right">
+    <a href class="h4" (click)="pickMovie($event)">Pick random movie to see</a>
+  </div>
+</div>
+
 <movie-details
   [movie]="movie"
   [isEven]="isEven"
