--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,1 +1,8 @@
+<div class="row toolbar--aux">
+  <div class="col-md-4 pull-right text-right">
+    <i class="fa fa-lrg fa-star"></i>
+    {{ favoritesCount }}
+  </div>
+</div>
+
 <navbar></navbar>
