--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,5 +1,7 @@
 <div class="row toolbar--aux">
   <div class="col-md-4 pull-right text-right">
+    <a [routerLink]="['/mailing-list']">Mailing List</a>
+     |
     <i class="fa fa-lrg fa-star"></i>
     {{ favoritesCount }}
   </div>
