Add model-driven newsletter form

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -2,6 +2,8 @@
   <div class="col-md-4 pull-right text-right">
     <a [routerLink]="['/mailing-list']">Mailing List</a>
      |
+     <a [routerLink]="['/newsletter']">Newsletter</a>
+     |
     <i class="fa fa-lrg fa-star"></i>
     {{ favoritesCount }}
   </div>
